--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 body {
-  font-family: arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 h1 {
-  color: #878787;
-  font-size: 24px;
-  font-weight: 100;
+  color: #091f9b;
+  font-size: 35px;
+  font-weight: 400;
   line-height: 28px;
   margin-bottom: 0;
 }
@@ -17,19 +17,23 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: #616060;
-  font-size: 16px;
+  color: #444242;
+  font-size: 14px;
   font-weight: 100;
   line-height: 19px;
 }
+li::first-letter {
+  text-transform: capitalize;
+}
+
 .weather-app-wrapper {
-  max-width: 600px;
+  max-width: 500px;
   margin: 30px auto;
 }
 
 .weather-app {
-  padding: 20px;
-  border: 1px solid #dadde1;
+  padding: 40px 20px 30px 50px;
+  border: 1px solid #6f8296;
   border-radius: 8px;
 }
 
@@ -44,8 +48,8 @@ li {
 }
 
 .weather-temperature strong {
-  color: #0c0c0c;
-  font-size: 64px;
+  color: #151149;
+  font-size: 58px;
   line-height: 1;
   font-weight: 400;
 }
@@ -55,11 +59,34 @@ li {
   top: -34px;
 }
 .bottom-text {
-  font-size: 11px;
+  font-size: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .open-source-link:hover {
   font-style: normal;
   color: #d4330b;
   text-decoration: none;
   font-weight: 600;
+}
+.col-3 {
+  margin-left: -25px;
+}
+.date {
+  padding-left: 5px;
+}
+.li-date {
+  line-height: 35px;
+  padding-left: 5px;
+  font-size: 12px;
+  font-style: italic;
+  color: #585656;
+}
+
+.active {
+  color: #0a1864;
+}
+.active:hover {
+  color: #2e5ee0;
+  text-decoration: none;
+  font-weight: 100;
 }
