--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,12 @@
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: #edf0f1;
 }
 
 h1 {
-  color: #091f9b;
+  padding-top: 20px;
+  color: #000000;
   font-size: 35px;
   font-weight: 400;
   line-height: 28px;
@@ -49,7 +51,7 @@ li::first-letter {
 }
 
 .weather-temperature strong {
-  color: #151149;
+  color: #4d4d4d;
   font-size: 58px;
   line-height: 1;
   font-weight: 400;
@@ -68,30 +70,36 @@ li::first-letter {
 }
 .open-source-link:hover {
   font-style: normal;
-  color: #d4330b;
+  color: #e03392;
   text-decoration: none;
   font-weight: 600;
 }
 .col-3 {
   margin-left: -25px;
 }
-.date {
-  padding-left: 5px;
-}
+
 .li-date {
   line-height: 35px;
-  padding-left: 5px;
-  font-size: 13px;
-  font-style: italic;
+  font-size: 14px;
   color: #585656;
   font-family: Arial, Helvetica, sans-serif;
+  padding-left: 3px;
+  font-style: italic;
 }
 
 .active {
-  color: #0a1864;
+  color: #368cee;
+  font-size: 13px;
+  font-weight: bold;
 }
 .active:hover {
-  color: #2e5ee0;
+  color: #4d4d4d;
   text-decoration: none;
-  font-weight: 100;
+  font-weight: bold;
+}
+.description {
+  padding-left: 3px;
+  line-height: 25px;
+  font-size: 18px;
+  color: #0947f1;
 }
