--- a/src/style.css
+++ b/src/style.css
@@ -128,3 +128,11 @@ li::first-letter {
   line-height: 15px;
   white-space: nowrap;
 }
+
+.current-date {
+  color: #4d4d4d;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 38px;
+  font-weight: 200;
+}
