--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,5 @@
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background-color: #f9fffd;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -10,6 +8,9 @@ h1 {
   font-weight: 400;
   line-height: 28px;
   margin-bottom: 0;
+}
+h4 {
+  font-size: 16px;
 }
 ul {
   margin: 0;
@@ -27,85 +28,114 @@ li {
 li::first-letter {
   text-transform: capitalize;
 }
+.day-time {
+  color: #ffffff;
+}
+.current-date {
+  color: #ffffff;
+}
 
+.header-weather-today {
+  color: #dee6fc;
+  font-family: "Courier New", Courier, monospace;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  font-size: 16px;
+  font-style: italic;
+}
 .weather-app-wrapper {
-  max-width: 700px;
-  margin: 20px auto;
+  max-width: 600px;
+  margin: 30px auto;
+  margin-bottom: 5px;
 }
 
 .weather-app {
   padding: 20px 0px 20px 20px;
-  border: 1px solid #6f8296;
-  border-radius: 8px;
+  border: 5px solid #000000;
+  border-radius: 20px;
+  box-shadow: 5px 5px 50px rgba(70, 70, 70, 0.932);
+  background-image: linear-gradient(to top, #ffffff 0%, #291d44 100%);
 }
 
 .overview {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .weather-temperature img {
   margin-right: 5px;
-  height: 64px;
-  width: 64px;
+  height: 100px;
+  width: 100px;
 }
 
 .weather-temperature strong {
-  color: #4d4d4d;
-  font-size: 58px;
+  color: #000000;
+  font-size: 80px;
   line-height: 1;
-  font-weight: 400;
+  font-style: bolder;
+  font-weight: 500;
 }
 .weather-temperature .units {
   position: relative;
   font-size: 13px;
-  top: -34px;
+  top: -46px;
 }
-.bottom-text {
-  font-size: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.open-source-link {
-  padding-top: 10px;
-  padding-left: 8px;
-}
-.open-source-link:hover {
-  font-style: normal;
-  color: #e03392;
-  text-decoration: none;
-  font-weight: 600;
-}
+
 .col-3 {
-  margin-left: -25px;
+  margin-left: -11px;
 }
 
 .li-date {
   line-height: 35px;
-  font-size: 14px;
-  color: #585656;
+  font-size: 13px;
+  color: #000000;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 3px;
   font-style: italic;
+}
+.date {
+  font-size: 14px;
+  color: #242323;
+  font-weight: 600;
 }
 .description {
   padding-left: 3px;
   line-height: 25px;
   font-size: 18px;
-  color: #0947f1;
+  color: #ffffff;
 }
 
 .weather-temperature .active {
-  color: #4d4d4d;
+  color: #000000;
   font-size: 13px;
   cursor: default;
 }
+
 .weather-temperature .active:hover {
   color: #40bfe6;
   text-decoration: none;
   cursor: default;
 }
+.weather-details {
+  padding-top: 7px;
+  padding-left: 80px;
+}
+.humidity {
+  color: #000000;
+}
+.wind {
+  color: #000000;
+}
+
+.forecast-per-three-hours {
+  font-size: 10px;
+  font-family: monospace;
+  font-style: italic;
+  margin-left: 8px;
+  margin-bottom: 15px;
+}
 
 .weather-forecast h6 {
-  color: #4d4d4d;
+  color: #000000;
   font-size: 14px;
   font-weight: 400;
   text-align: center;
@@ -116,15 +146,52 @@ li::first-letter {
 .weather-forecast img {
   display: block;
   margin: 0 auto;
-  height: 48px;
-  width: 48px;
+  height: 40px;
+  width: 40px;
 }
 .weather-forecast-temperature {
   text-align: center;
-  color: #4d4d4d;
+  color: #000000;
   font-size: 13px;
   font-weight: 400;
+  font-style: bold;
   height: auto;
   line-height: 15px;
   white-space: nowrap;
+  padding-left: -10px;
+}
+.col-2 {
+  margin-left: -3px;
+}
+
+.btn-secondary {
+  font-size: 9px;
+  color: #efd6ff;
+  font-family: monospace;
+  background-color: #000000;
+  border: 2px solid #46078d;
+  border-radius: 10px;
+  box-shadow: 3px 3px 4px rgba(209, 206, 209, 0.685);
+}
+
+.btn-light {
+  font-size: 10px;
+  font-family: monospace;
+  background-color: #000000;
+  color: #efd6ff;
+  border: 1px solid #46078d;
+  border-radius: 10px;
+  box-shadow: 3px 3px 4px rgba(209, 206, 209, 0.685);
+}
+
+.bottom-text {
+  font-size: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.open-source-link:hover {
+  font-style: normal;
+  color: #6b11b4;
+  text-decoration: none;
+  font-weight: 600;
 }
