--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
 
 h1 {
   color: #000000;
