--- a/src/style.css
+++ b/src/style.css
@@ -168,9 +168,12 @@ li::first-letter {
 .col-2 {
   margin-left: -3px;
 }
-
+.form-control {
+  text-align: center;
+}
 .btn-secondary {
   font-size: 10px;
+  text-align: center;
   color: #efd6ff;
   font-family: monospace;
   background-color: #000000;
